# secs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run  secs.sublime-project
benchmarks/: .release_time  main.cpp
include/: secs.h
include/secs/: any.h  component_ops.h  component_ops.i.h  component_ptr.h  component_set.h  component_store.h  component_view.h  container.h  container.i.h  container.inline.h  container_entity_view.h  detail.h  dynamic_tuple.h  entity.h  entity.i.h  entity.inline.h  entity_filter.h  entity_store.h  entity_store.inline.h  entity_view.h  entity_view_adapter.h  environment.h  event.h  event_manager.h  event_traits.h  events.h  filtered_entity.h  functional.h  handle.h  heterogeneous_set.h  implementation.h  lifetime_events.h  lifetime_subscriber.h  loaded_entity.h  misc.h  omniset.h  signal.h  store.h  type_index.h  type_indexer.h  (+2 more)
src/: any.cpp  component_ptr.h  component_store.cpp  component_store.h  component_view.h  container.cpp  entity.cpp  entity.h  entity.inline.h  entity_store.cpp  entity_store.h  entity_store.inline.h  entity_view.h  environment.cpp  environment.h  environment.inline.h  errors.h  handle.cpp  handle.h  signal.cpp  system.h  test.cpp  type_index.cpp  type_index.h
tests/: Makefile  any.cpp  any_test.cpp  container.cpp  container_test.cpp  detail_test.cpp  event_test.cpp  main_test.cpp  misc_test.cpp  signal_test.cpp  test.cpp  type_index_test.cpp  type_indexer_test.cpp  version_test.cpp
